--- a/musicpimp/src/main/AndroidManifest.xml
+++ b/musicpimp/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             <meta-data
                 android:name="android.support.UI_OPTIONS"
                 android:value="splitActionBarWhenNarrow" />
+            <!-- enable the search dialog to send searches to SearchableActivity -->
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".ui.activities.SearchableActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -173,6 +177,17 @@
             android:label="@string/app_name"
             android:name="com.google.zxing.client.android.CaptureActivity"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.activities.SearchableActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
         <!-- Required activities by Samsung Apps IAP -->
         <activity
             android:name="com.sec.android.iap.lib.activity.InboxActivity"
