--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation "me.zhanghai.android.materialprogressbar:library:1.6.1"
     implementation "com.squareup.okhttp3:okhttp:4.2.1"
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
+
+    api "androidx.media:media:1.1.0"
+
     testImplementation "junit:junit:4.12"
     androidTestImplementation "androidx.test:runner:1.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
