--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.core:core-ktx:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "androidx.fragment:fragment-ktx:1.2.0-rc04"
-    def navigationVersion = "2.1.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.0"
+    def navigationVersion = "2.2.0"
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
@@ -49,12 +49,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$navigationVersion"
     implementation "com.android.volley:volley:1.1.1"
     implementation "com.neovisionaries:nv-websocket-client:2.9"
-    implementation "com.google.android.material:material:1.2.0-alpha03"
+    implementation "com.google.android.material:material:1.2.0-alpha04"
     implementation "com.jakewharton.timber:timber:4.7.1"
-    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi:1.9.2"
     implementation "me.zhanghai.android.materialprogressbar:library:1.6.1"
     implementation "com.squareup.okhttp3:okhttp:4.2.1"
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
 
     api "androidx.media:media:1.1.0"
 
