--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -37,11 +37,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.core:core-ktx:1.2.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    implementation "androidx.fragment:fragment-ktx:1.2.4"
-    def navigationVersion = "2.2.1"
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+    def navigationVersion = "2.3.0"
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
@@ -49,7 +49,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "com.android.volley:volley:1.1.1"
     implementation "com.neovisionaries:nv-websocket-client:2.9"
-    implementation "com.google.android.material:material:1.2.0-alpha05"
+    implementation "com.google.android.material:material:1.2.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "com.squareup.moshi:moshi:1.9.2"
     implementation "me.zhanghai.android.materialprogressbar:library:1.6.1"
@@ -62,7 +62,7 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 
-    def appCenterSdkVersion = "3.1.0"
+    def appCenterSdkVersion = "3.2.0"
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 }
